# MaarsOS

./: .env.example  .gitignore  DEPLOYMENT.md  MAARS Build Clarity Supplement_ Execution & Alignment  MAARS Critical Gap Registry_ Adversarial Audit Findings.md  MAARS_Content_Layer_Deep_Analysis.md  MAARS_Critical_Gap_Remediation_Master.md  MAARS_MCP_API_Integration_Spec.md  MAARS_Master_Implementation_Guide.md  MAARS_Technical_Architecture_Design_Spec.md  README.md  db.md.save  launch-dashboard.sh  launch-hub.sh  serve-ui.sh  start-ui.sh
config/: astradb-schema.cql
docs/: IMPLEMENTATION_PRIORITIES.md  PHASE8_INTEGRATION_STRATEGY.md  SPEC_COMPLIANCE_GAP_ANALYSIS.md  WEEK1_DAYS1-4_COMPLETE.md  WEEK2_COMPLETE_SUMMARY.md  WEEK2_DAY2_COMPLETE.md  WEEK2_DAY3_COMPLETE.md  WEEK3_DAY1_COMPLETE.md  WEEK3_DAY2_COMPLETE.md
infrastructure/docker/: docker-compose.yml  kong.yml
infrastructure/monitoring/: README.md  alert-rules.yml  grafana-datasources.yml  loki-config.yml  prometheus.yml  promtail-config.yml
services/vessel-economics/: Dockerfile  README.md  main.py  requirements.txt
services/vessel-gateway/: Dockerfile  README.md  go.mod  main.go
services/vessel-integrations/: Dockerfile  README.md  main.py  requirements.txt
services/vessel-interface/: BACKEND_INTEGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  MAARS_ASSISTANT.md  README.md  UNIVERSAL_HUB_README.md  VISION_LAYER_IMPLEMENTATION.md  next.config.js  package-lock.json  package.json  (+1 more)
services/vessel-sandbox/: Cargo.toml  Dockerfile  README.md
services/vessel-sandbox/src/: main.rs  sandbox.rs  storage.rs
(+125 files in other folders)
