[package]
name = "vessel-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "17.0"
wasmtime-wasi = "17.0"
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
aws-sdk-s3 = "1.13"
aws-config = "1.1"

[dev-dependencies]
tempfile = "3.8"